--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -17,5 +17,34 @@
 
 
 <ion-content padding>
+  <ion-card>
+    <ion-card-header color="primary">Location Information</ion-card-header>
+    <ion-card-content>
+      121, Clear Water Bay Road <br>
+      Clear Water Bay, Kowloon <br>
+      HONG KONG <br>
+      <ion-icon name="call"></ion-icon>: +852 1234 5678 <br>
+      <ion-icon name="print"></ion-icon>: +852 8765 4321 <br>
+      <ion-icon name="mail"></ion-icon>:confusion@food.net <br>
+    </ion-card-content>
 
+
+
+    <ion-row class="row">
+        <ion-col class="col">
+          <button clear="" icon-left="" ion-button="" small="" ng-reflect-small="" ng-reflect-clear="" class="button button-md button-clear button-clear-md button-small button-small-md"><span class="button-inner">
+            <ion-icon name="call" role="img" class="icon icon-md ion-md-call" aria-label="call" ng-reflect-name="call"></ion-icon>
+            <div>CALL</div>
+          </span><div class="button-effect"></div></button>
+        </ion-col>
+        <ion-col class="col">
+          <button clear="" icon-left="" ion-button="" small="" ng-reflect-small="" ng-reflect-clear="" class="button button-md button-clear button-clear-md button-small button-small-md"><span class="button-inner">
+            <ion-icon name="mail" role="img" class="icon icon-md ion-md-mail" aria-label="mail" ng-reflect-name="mail"></ion-icon>
+            <div>EMAIL</div>
+          </span><div class="button-effect"></div></button>
+        </ion-col>
+      </ion-row>
+
+
+  </ion-card>
 </ion-content>
