--- a/src/pages/dishdetail/dishdetail.html
+++ b/src/pages/dishdetail/dishdetail.html
@@ -2,6 +2,15 @@
 
   <ion-navbar color="primary">
     <ion-title>Dish Details</ion-title>
+    
+   
+
+   <ion-buttons end>
+      <button>
+          <ion-icon name="more" (click)="openActionSheet()"></ion-icon> 
+      </button>
+    </ion-buttons>
+
   </ion-navbar>
 
 </ion-header>
