--- a/src/pages/comment/comment.html
+++ b/src/pages/comment/comment.html
@@ -40,6 +40,6 @@
                   <ion-textarea  formControlName="comment"></ion-textarea>
                 </ion-item>
 
-          <button ion-button type="submit" [disabled]="!comment.valid">Reserve</button>
+          <button ion-button type="submit" [disabled]="!comment.valid">Add Comment</button>
         </form>   
 </ion-content>
