--- a/src/pages/dishdetail/dishdetail.html
+++ b/src/pages/dishdetail/dishdetail.html
@@ -15,6 +15,12 @@
 
 
 <ion-content padding>
+
+
+    <ion-grid>
+        <ion-row align-items-center>
+          <ion-col col-12 col-lg-6>
+
 <ion-card *ngIf="dish">
   <img src="{{BaseURL + dish.image}}"/>
   <ion-card-content>
@@ -49,6 +55,9 @@
   <h4>{{errMess}}</h4>
 </div>
 
+</ion-col>
+<ion-col col-12 col-lg-6>
+
 <ion-list *ngIf="dish">
   <ion-list-header>
     Comments
@@ -61,6 +70,10 @@
     </p>
   </ion-item>
 </ion-list>
+
+</ion-col>
+</ion-row>
+</ion-grid>
 
 <ion-fab bottom right [hidden]="favorite">
     <button ion-fab (click)="addToFavorites()">
