--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -32,7 +32,7 @@
 
     <ion-row class="row">
         <ion-col class="col">
-          <button clear="" icon-left="" ion-button="" small="" ng-reflect-small="" ng-reflect-clear="" class="button button-md button-clear button-clear-md button-small button-small-md"><span class="button-inner">
+          <button (click)="callRestaurant('+852 1234 5678')" clear="" icon-left="" ion-button="" small="" ng-reflect-small="" ng-reflect-clear="" class="button button-md button-clear button-clear-md button-small button-small-md"><span class="button-inner">
             <ion-icon name="call" role="img" class="icon icon-md ion-md-call" aria-label="call" ng-reflect-name="call"></ion-icon>
             <div>CALL</div>
           </span><div class="button-effect"></div></button>
